- dark mode + tailwind proper integration - cleanup/fixes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,7 @@
     --loud-foreground: var(--white);
   }
 
-  [data-theme='dark'] {
+  html.dark {
     --background: var(--black);
     --foreground: var(--white);
   }
